gcc/testsuite/gcc.dg/20010516-1.c
foo()
{
      char d;
      __asm volatile ( "" :: "m"(&d)); /* { dg-error "" "non-lvalue" } */
}
